--- a/PLOTTING C29 989/BAND4.ipynb
+++ b/PLOTTING C29 989/BAND4.ipynb
@@ -83,7 +83,12 @@
     "    \n",
     "    \n",
     "for row in vector_data_actual_cartesian:\n",
-    "    ax[1].plot([row[0], row[1]], [row[2], row[3]], color='black')"
+    "    ax[1].plot([row[0], row[1]], [row[2], row[3]], color='black')\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "plt.savefig(image_folder_path + \"IRS63_StokesI_POLI_vectors_BAND4.pdf\", \n",
+    "            dpi=300)    "
    ]
   },
   {
@@ -133,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c526940e",
+   "id": "444e1d76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,8 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "39055576",
+   "execution_count": 9,
+   "id": "7c2f1735",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "61e5367a",
    "metadata": {},
    "outputs": [],
@@ -184,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7410def7",
    "metadata": {},
    "outputs": [
@@ -241,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "53bdf032",
    "metadata": {
     "code_folding": []
@@ -334,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "0aa4c307",
    "metadata": {},
    "outputs": [],
@@ -351,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "3e80b244",
    "metadata": {
     "scrolled": false
@@ -399,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "b7f6fddf",
    "metadata": {},
    "outputs": [
@@ -431,17 +436,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "6fa25b3b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc5360feeb0>"
+       "<matplotlib.legend.Legend at 0x7fbe0af722e0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -493,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "bd0a913b",
    "metadata": {},
    "outputs": [
@@ -520,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "d88f824e",
    "metadata": {},
    "outputs": [
@@ -550,17 +555,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "e2e964cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc5218b60d0>"
+       "<matplotlib.legend.Legend at 0x7fbe2efe8610>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -604,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "64d23add",
    "metadata": {},
    "outputs": [
@@ -627,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "4b5aad4b",
    "metadata": {},
    "outputs": [
@@ -650,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "fbfd1aff",
    "metadata": {},
    "outputs": [
@@ -673,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "6d3a44f9",
    "metadata": {},
    "outputs": [
