Add image save for overleaf

--- a/PLOTTING C29 989/BAND4.ipynb
+++ b/PLOTTING C29 989/BAND4.ipynb
@@ -52,9 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "6b72962e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -88,7 +90,8 @@
     "    \n",
     "    \n",
     "plt.savefig(image_folder_path + \"IRS63_StokesI_POLI_vectors_BAND4.pdf\", \n",
-    "            dpi=300)    "
+    "            dpi=300, \n",
+    "            bbox_inches='tight')    "
    ]
   },
   {
@@ -138,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "444e1d76",
+   "id": "07708729",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7c2f1735",
+   "id": "01be5271",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +244,11 @@
     "    cb_friendly = False,\n",
     "    vline = True,\n",
     "    fit_slices = True\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "plt.savefig(image_folder_path + \"IRS63_StokesI_slice_BAND4.pdf\", \n",
+    "            dpi=300, \n",
+    "            bbox_inches='tight')    "
    ]
   },
   {
@@ -300,7 +307,11 @@
     "    cb_friendly = False,\n",
     "    vline = True,\n",
     "    fit_slices = True\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "plt.savefig(image_folder_path + \"IRS63_POLI_slice_BAND4.pdf\", \n",
+    "            dpi=300, \n",
+    "            bbox_inches='tight')    "
    ]
   },
   {
@@ -485,7 +496,13 @@
     "        ax.plot([row[0], row[1]], [row[2], row[3]], color='red', lw=5)\n",
     "\n",
     "# Show legend\n",
-    "ax.legend(fontsize=legend_title_fs, loc = 'best')\n"
+    "ax.legend(fontsize=legend_title_fs, loc = 'best')\n",
+    "\n",
+    "\n",
+    "\n",
+    "plt.savefig(image_folder_path + \"IRS63_best_ratio_BAND4.pdf\", \n",
+    "            dpi=300, \n",
+    "            bbox_inches='tight')   \n"
    ]
   },
   {
@@ -604,7 +621,12 @@
     "            label='Best Gaussian Model' if first_best_model else None)\n",
     "    first_best_model = False\n",
     "\n",
-    "ax.legend(fontsize = legend_text_fs)"
+    "ax.legend(fontsize = legend_text_fs)\n",
+    "\n",
+    "\n",
+    "plt.savefig(image_folder_path + \"IRS63_best_gaussian_BAND4.pdf\", \n",
+    "            dpi=300, \n",
+    "            bbox_inches='tight')   "
    ]
   },
   {
