Push after CASCA before fixing selfcal on band 7

--- a/PLOTTING C29 989/FITS FILES/BAND7/separate_band7_file.ipynb
+++ b/PLOTTING C29 989/FITS FILES/BAND7/separate_band7_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "08c45eb1",
    "metadata": {},
    "outputs": [],
@@ -14,9 +14,9 @@
     "\n",
     "header = hdul[0].header\n",
     "# Separate the Stokes components\n",
-    "I = data[0, :, :, :]\n",
-    "Q = data[1, :, :, :]\n",
-    "U = data[2, :, :, :]\n",
+    "I = data[0, 0, :, :]\n",
+    "Q = data[1, 0, :, :]\n",
+    "U = data[2, 0, :, :]\n",
     "\n",
     "# You can save each one using fits.writeto if needed\n",
     "from astropy.io.fits import writeto\n",
@@ -28,7 +28,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "id": "9b940717",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(540, 540)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "I.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "1fef37f2",
    "metadata": {
     "scrolled": false
@@ -302,7 +323,7 @@
        "HISTORY CASA END LOGTABLE                                                       "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
