After CASCA before fixing Band 7 selfcal

--- a/PLOTTING C29 989/BAND4.ipynb
+++ b/PLOTTING C29 989/BAND4.ipynb
@@ -137,7 +137,7 @@
     "    \n",
     "    \n",
     "    \n",
-    "plt.savefig(image_folder_path + \"IRS63_StokesI_POLI_vectors_BAND4.pdf\", \n",
+    "plt.savefig(writeup_image_folder_path + \"IRS63_StokesI_POLI_vectors_BAND4.pdf\", \n",
     "            dpi=300, \n",
     "            bbox_inches='tight')    \n",
     " "
@@ -417,7 +417,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f8461846100>"
+       "<matplotlib.legend.Legend at 0x7facf095b910>"
       ]
      },
      "execution_count": 15,
@@ -572,9 +572,9 @@
     "    fit_slices = True\n",
     ")\n",
     "\n",
-    "plt.savefig(image_folder_path + \"IRS63_StokesI_slice_BAND4.pdf\", \n",
-    "            dpi=300, \n",
-    "            bbox_inches='tight')\n",
+    "# plt.savefig(image_folder_path + \"IRS63_StokesI_slice_BAND4.pdf\", \n",
+    "#             dpi=300, \n",
+    "#             bbox_inches='tight')\n",
     " "
    ]
   },
@@ -636,9 +636,9 @@
     "    fit_slices = True\n",
     ")\n",
     "\n",
-    "plt.savefig(image_folder_path + \"IRS63_POLI_slice_BAND4.pdf\", \n",
-    "            dpi=300, \n",
-    "            bbox_inches='tight')    \n",
+    "# plt.savefig(image_folder_path + \"IRS63_POLI_slice_BAND4.pdf\", \n",
+    "#             dpi=300, \n",
+    "#             bbox_inches='tight')    \n",
     " "
    ]
   },
@@ -698,9 +698,9 @@
     "    fit_slices = True\n",
     ")\n",
     "\n",
-    "plt.savefig(image_folder_path + \"IRS63_POLF_slice_BAND4.pdf\", \n",
-    "            dpi=300, \n",
-    "            bbox_inches='tight') \n",
+    "# plt.savefig(image_folder_path + \"IRS63_POLF_slice_BAND4.pdf\", \n",
+    "#             dpi=300, \n",
+    "#             bbox_inches='tight') \n",
     " "
    ]
   },
@@ -881,7 +881,7 @@
     "\n",
     "\n",
     "\n",
-    "plt.savefig(image_folder_path + \"IRS63_best_ratio_BAND4.pdf\", \n",
+    "plt.savefig(writeup_image_folder_path + \"IRS63_best_ratio_BAND4.pdf\", \n",
     "            dpi=300, \n",
     "            bbox_inches='tight')    "
    ]
@@ -997,7 +997,7 @@
     "         loc = 'upper left')\n",
     "\n",
     "\n",
-    "plt.savefig(image_folder_path + \"IRS63_best_gaussian_BAND4.pdf\", \n",
+    "plt.savefig(writeup_image_folder_path + \"IRS63_best_gaussian_BAND4.pdf\", \n",
     "            dpi=300, \n",
     "            bbox_inches='tight')  "
    ]
