--- a/PLOTTING C29 989/BAND6_v2.ipynb
+++ b/PLOTTING C29 989/BAND6_v2.ipynb
@@ -133,7 +133,7 @@
     "for row in vector_data_actual_cartesian:\n",
     "    ax[1].plot([row[0], row[1]], [row[2], row[3]], color='black')\n",
     "    \n",
-    "plt.savefig(image_folder_path + \"IRS63_StokesI_POLI_vectors_BAND6.pdf\", \n",
+    "plt.savefig(writeup_image_folder_path + \"IRS63_StokesI_POLI_vectors_BAND6.pdf\", \n",
     "            dpi=300, \n",
     "            bbox_inches='tight')    \n"
    ]
@@ -406,9 +406,9 @@
     "    fit_slices = True\n",
     ")\n",
     "\n",
-    "plt.savefig(image_folder_path + \"IRS63_StokesI_slice_BAND6.pdf\", \n",
-    "            dpi=300, \n",
-    "            bbox_inches='tight')   \n"
+    "# plt.savefig(image_folder_path + \"IRS63_StokesI_slice_BAND6.pdf\", \n",
+    "#             dpi=300, \n",
+    "#             bbox_inches='tight')   \n"
    ]
   },
   {
@@ -470,9 +470,9 @@
     ")\n",
     "\n",
     "\n",
-    "plt.savefig(image_folder_path + \"IRS63_POLI_slice_BAND6.pdf\", \n",
-    "            dpi=300, \n",
-    "            bbox_inches='tight') \n",
+    "# plt.savefig(image_folder_path + \"IRS63_POLI_slice_BAND6.pdf\", \n",
+    "#             dpi=300, \n",
+    "#             bbox_inches='tight') \n",
     " "
    ]
   },
@@ -554,9 +554,9 @@
     ")\n",
     "\n",
     "\n",
-    "plt.savefig(image_folder_path + \"IRS63_POLF_slice_BAND6.pdf\", \n",
-    "            dpi=300, \n",
-    "            bbox_inches='tight')   "
+    "# plt.savefig(image_folder_path + \"IRS63_POLF_slice_BAND6.pdf\", \n",
+    "#             dpi=300, \n",
+    "#             bbox_inches='tight')   "
    ]
   },
   {
@@ -798,7 +798,7 @@
     "ax.legend(fontsize=legend_title_fs, loc = 'best')\n",
     "\n",
     "\n",
-    "plt.savefig(image_folder_path + \"IRS63_best_ratio_BAND6.pdf\", \n",
+    "plt.savefig(writeup_image_folder_path + \"IRS63_best_ratio_BAND6.pdf\", \n",
     "            dpi=300, \n",
     "            bbox_inches='tight')   \n"
    ]
@@ -981,14 +981,14 @@
     "ax.legend(fontsize = legend_text_fs)\n",
     "\n",
     "\n",
-    "plt.savefig(image_folder_path + \"IRS63_best_gaussian_BAND6.pdf\", \n",
+    "plt.savefig(writeup_image_folder_path + \"IRS63_best_gaussian_BAND6.pdf\", \n",
     "            dpi=300, \n",
     "            bbox_inches='tight')   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "eb4dc1c7",
    "metadata": {},
    "outputs": [
