Updates from Overleaf

--- a/WRITEUP_AND_IMAGES/TEXT_FILES/Chapter3.tex
+++ b/WRITEUP_AND_IMAGES/TEXT_FILES/Chapter3.tex
@@ -7,8 +7,8 @@
 % ------------------------------------------------
 \begin{figure*}[h]
   \centering
-  \includegraphics[width=2\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_StokesI_slice_BAND6.pdf}
-  \caption{Ad caption.}
+  \includegraphics[width=1.1\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_StokesI_slice_BAND6.pdf}
+  \caption{Add caption.}
   \label{fig: }
 \end{figure*}
 
@@ -18,11 +18,28 @@
 % ------------------------------------------------
 \begin{figure*}[h]
   \centering
-  \includegraphics[width=2\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_POLI_slice_BAND6.pdf}
-  \caption{Ad caption.}
+  \includegraphics[width=1.1\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_POLI_slice_BAND6.pdf}
+  \caption{Add caption.}
   \label{fig: }
 \end{figure*}
 % ------------------------------------------------
+% ------------------------------------------------
+\subsection{POLF}
+% ------------------------------------------------
+\begin{figure*}[h]
+  \centering
+  \includegraphics[width=1.1\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_POLF_slice_BAND6.pdf}
+  \caption{Add caption.}
+  \label{fig: }
+\end{figure*}
+% ------------------------------------------------
+
+
+
+
+
+
+
 
 
 \section{Band 4}
@@ -31,8 +48,8 @@
 % ------------------------------------------------
 \begin{figure*}[h]
   \centering
-  \includegraphics[width=2\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_StokesI_slice_BAND4.pdf}
-  \caption{Ad caption.}
+  \includegraphics[width=1.1\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_StokesI_slice_BAND4.pdf}
+  \caption{Add caption.}
   \label{fig: }
 \end{figure*}
 % ------------------------------------------------
@@ -43,8 +60,60 @@
 % ------------------------------------------------
 \begin{figure*}[h]
   \centering
-  \includegraphics[width=2\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_POLI_slice_BAND4.pdf}
-  \caption{Ad caption.}
+  \includegraphics[width=1.1\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_POLI_slice_BAND4.pdf}
+  \caption{Add caption.}
+  \label{fig: }
+\end{figure*}
+% ------------------------------------------------
+
+
+% ------------------------------------------------
+\subsection{POLF}
+% ------------------------------------------------
+\begin{figure*}[h]
+  \centering
+  \includegraphics[width=1.1\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_POLF_slice_BAND4.pdf}
+  \caption{Add caption.}
+  \label{fig: }
+\end{figure*}
+% ------------------------------------------------
+
+
+
+
+
+
+\section{Multiwaveength on same plot
+
+\subsection{Stokes I}
+% ------------------------------------------------
+\begin{figure*}[h]
+  \centering
+  \includegraphics[width=1.1\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_mw_slice_StokesI.pdf}
+  \caption{Add caption.}
+  \label{fig: }
+\end{figure*}
+% ------------------------------------------------
+
+
+\subsetion{POLI}
+% ------------------------------------------------
+\begin{figure*}[h]
+  \centering
+  \includegraphics[width=1.1\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_mw_slice_POLI.pdf}
+  \caption{Add caption.}
+  \label{fig: }
+\end{figure*}
+% ------------------------------------------------
+
+
+
+\subsection{POLF}
+% ------------------------------------------------
+\begin{figure*}[h]
+  \centering
+  \includegraphics[width=1.1\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_mw_slice_POLF.pdf}
+  \caption{Add caption.}
   \label{fig: }
 \end{figure*}
 % ------------------------------------------------
