--- a/WRITEUP_AND_IMAGES/TEXT_FILES/Chapter4.tex
+++ b/WRITEUP_AND_IMAGES/TEXT_FILES/Chapter4.tex
@@ -4,8 +4,8 @@
 \section{Band 6}
 \begin{figure*}[h]
   \centering
-  \includegraphics[width=2\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_best_ratio_BAND6.pdf}
-  \caption{Ad caption.}
+  \includegraphics[width=1.1\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_best_ratio_BAND6.pdf}
+  \caption{Add caption.}
   \label{fig: }
 \end{figure*}
 
@@ -14,7 +14,7 @@
 \section{Band 4}
 \begin{figure*}[h]
   \centering
-  \includegraphics[width=2\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_best_ratio_BAND4.pdf}
-  \caption{Ad caption.}
+  \includegraphics[width=1.1\textwidth]{WRITEUP_AND_IMAGES/IMAGES/IRS63_best_ratio_BAND4.pdf}
+  \caption{Add caption.}
   \label{fig: }
 \end{figure*}
