--- a/WRITEUP_AND_IMAGES/THESIS_WRITEUP.tex
+++ b/WRITEUP_AND_IMAGES/THESIS_WRITEUP.tex
@@ -130,6 +130,10 @@ Acknowledgments if any...
 
 \pagenumbering{arabic}
 
+
+\include{WRITEUP_AND_IMAGES/TEXT_FILES/Polarization Equations}
+
+
 \include{WRITEUP_AND_IMAGES/TEXT_FILES/Chapter1}
 
 \include{WRITEUP_AND_IMAGES/TEXT_FILES/Chapter2}
